--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,4 @@
 @import "reset";
 @import "header";
-// @import "posts/new";
-// @import "devise/main"
+@import "posts/index";
+@import "devise/main"
