フロント_headerに残り時間表示

--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -11,6 +11,12 @@
       color: #f18D9E;
     }
   }
+  &__center {
+    font-size: 30px;
+    font-weight: bold;
+    color: #E6D72A;
+    line-height: 60px;
+  }
   &__right {
     margin-left: 20px;
     margin-top: 30px;
