--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,18 +1,17 @@
 .start__view
-  .start__message
+
+  #timer.timer__input
     さぁ！リフレッシュをしましょう♪
     %br/
     まずはリフレッシュする時間を入力してください
 
-  .timer__input
     %form{name: "timer"}
       %input{type: "text", value: ""}>/
       分
       %input{type: "text", value: ""}>/
       秒
       %br/
-      %input{onclick: "cntStart()", type: "button", value: "スタート"}/
+      %input{onclick: "cntStart(); goServlet()", type: "button", value: "スタート"}/
 
-
-
-  = link_to "Start", '/posts/new', class: "start__btn"
+  #game.game__select
+    ゲーム
