--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -14,4 +14,4 @@
       %input{onclick: "cntStart(); goServlet()", type: "button", value: "スタート"}/
 
   #game.game__select
-    ゲーム
+    = render "posts/game"
