--- a/app/views/posts/_game.html.haml
+++ b/app/views/posts/_game.html.haml
@@ -1,1 +1,8 @@
-game
+.puestion
+  = preparation
+
+
+
+= form_tag('/posts', method: :post) do
+  %input{:name => "content", :type => "text"}/
+  %input{:type => "submit", :value => "投稿する"}/
