--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,6 +8,9 @@
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
+    .notifications
+      - flash.each do |key, value|
+        =content_tag(:div, value, class: key)
     %header.header
       .header__title
         = link_to "PiNpOnPaN", root_path, class: "header__title--text"
